--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">fastcampus_13</string>
+    <string name="login_button">로그인</string>
+    <string name="sign_up_button">회원가입</string>
 </resources>
